Bug 1478081 - avoid accessing null pointer; r=valentin

Differential Revision: https://phabricator.services.mozilla.com/D2336